src/test/rustdoc-ui/feature-gate-custom_code_classes_in_docs.stderr
error[E0658]: custom classes in code blocks are unstable
  --> $DIR/feature-gate-custom_code_classes_in_docs.rs:1:1
   |
LL | / /// ```class:language-c
LL | | /// int main(void) { return 0; }
LL | | /// ```
   | |_______^
   |
   = note: see issue #79483 <https://github.com/rust-lang/rust/issues/79483> for more information
   = help: add `#![feature(custom_code_classes_in_docs)]` to the crate attributes to enable
   = note: found these custom classes: class:language-c

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
