src/test/rustdoc-ui/feature-gate-custom_code_classes_in_docs.rs
/// ```class:language-c
/// int main(void) { return 0; }
/// ```
//~^^^ ERROR 1:1: 3:8: custom classes in code blocks are unstable [E0658]
pub fn main() {}
